--- a/kittyhimestory.html
+++ b/kittyhimestory.html
@@ -46,18 +46,18 @@ float: left;
 <link rel="stylesheet" href="kittyhime.css"
     <link rel="shortcut icon" href="img/mewf.png">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="title" content="𝑘𝑖𝑡𝑡𝑦ℎ𝑖𝑚𝑒 ♡">
+    <meta name="title" content="♡ ꔫ 𝑘𝑖𝑡𝑡𝑦ℎ𝑖𝑚𝑒 ꔫ ♡">
     <meta name="description" content="꒰ ♡ all about etoile ♡ ꒱">
     <meta name="theme-color" content="#ffe4f2">
     <meta property="og:url" content="kittyhime.html">
-    <meta property="og:title" content="𝑘𝑖𝑡𝑡𝑦ℎ𝑖𝑚𝑒 ♡">
+    <meta property="og:title" content="♡ ꔫ 𝑘𝑖𝑡𝑡𝑦ℎ𝑖𝑚𝑒 ꔫ ♡">
     <meta property="og:description" content="꒰ ♡ all about etoile ♡ ꒱">
     <meta property="og:image" content="img/uwa.png">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:type" content="website">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://middlepot.com/links">
-    <meta property="twitter:title" content="𝑘𝑖𝑡𝑡𝑦ℎ𝑖𝑚𝑒 ♡">
+    <meta property="twitter:title" content="♡ ꔫ 𝑘𝑖𝑡𝑡𝑦ℎ𝑖𝑚𝑒 ꔫ ♡">
     <meta property="twitter:description" content="꒰ ♡ all about etoile ♡ ꒱">
     <meta property="twitter:image" content="img/uwa.png">
 </head>
