--- a/kittyhimedirectory.html
+++ b/kittyhimedirectory.html
@@ -7,7 +7,7 @@
  \ //   ^   //  /   of pompuffpaws )
 -->
 
-<link rel="shortcut icon" href="https://i.imgur.com/5xb5F3v.png">
+<link rel="shortcut icon" href="/kittyhime/kittyhimesample/img/pawcon.png">
 <style>
 body {
 background-image: url(../img/softpink.png); background-repeat: repeat;
