--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  \ //   ^   //  /   of pompuffpaws )
 -->
 
-<link rel="shortcut icon" href="/kittyhime/kittyhimesample/img/pawcon.png">
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>
 body {
     background-image: url(../img/softpink.png); background-repeat: repeat;
