--- a/kittyhimestory.html
+++ b/kittyhimestory.html
@@ -7,7 +7,7 @@
  \ //   ^   //  /   of pompuffpaws )
 -->
 
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>
 body {
     background-image: url(../img/softpink.png); background-repeat: repeat;
