--- a/kittyhimedirectory.html
+++ b/kittyhimedirectory.html
@@ -7,7 +7,7 @@
  \ //   ^   //  /   of pompuffpaws )
 -->
 
-<link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="shortcut icon" type="image/png" href="favicon.png">
 <style>
 body {
 background-image: url(../img/softpink.png); background-repeat: repeat;
