--- a/kittyhimepolicy.html
+++ b/kittyhimepolicy.html
@@ -11,8 +11,6 @@
 <style>
 body {
     background-image: url(../img/softpink.png); background-repeat: repeat;
-    width: -75%;
-    height: -75%;
     cursor:url("https://i.imgur.com/7yPAUWS.png"), progress;}
 a:hover {cursor:url(https://i.imgur.com/o580d2h.png), progress;
 }
@@ -67,13 +65,9 @@ position: relative;
     <img src="img/mewf.png">
 </center>
 <h1 id="h1"><img src="https://i.imgur.com/VLw5vg5.png"></img>
-etoile <img src="https://i.imgur.com/VLw5vg5.png"></img><br>
-꒰ lumiere ꒱<br>
-angelique
+website policy <img src="https://i.imgur.com/VLw5vg5.png"></img>
 </h1>
-<center>
 <h4>kittyhime defintion ♡ a kitten princess</h4>
-</center>
   <div class="centered">
 <p>welcome to etoile's official website !! ♡ etoile is a character that belongs to pompuffpaws. click the links to read more about her !!
 i hope you enjoy my ideas !! she was created on august 2 of 2019, and remains my soft beloved mascot to this very day !! ♡ 
@@ -85,4 +79,3 @@ i hope you enjoy my ideas !! she was created on august 2 of 2019, and remains my
 </center>
 </body>
 </html>
-
