--- a/index.html
+++ b/index.html
@@ -64,15 +64,16 @@ position: relative;
     <br><br>
 <center>
   <audio autoplay loop src="music/superstar.mp3"></audio>
-    <img src="img/mewf.png">
+    <img width= 320px; height= auto; src="img/mewf.png">
 </center>
-<h1 id="h1"><img src="https://i.imgur.com/VLw5vg5.png"></img>
-etoile <img src="https://i.imgur.com/VLw5vg5.png"></img><br>
+<h1 id="h1"><img width= 27px; height= auto; src="img/littlebow.png"></img>
+etoile <img width= 27px; height= auto; src="img/littlebow.png"></img><br>
 ꒰ lumiere ꒱<br>
 angelique
 </h1>
 <center>
 <h4>kittyhime defintion ♡ a kitten princess</h4>
+<img width= 350px; height= auto; src="img/ribbonbanner.png"></img>
 </center>
   <div class="centered">
 <p>welcome to etoile's official website !! ♡ etoile is a character that belongs to pompuffpaws. click the links to read more about her !!
