--- a/kittyhimedirectory.html
+++ b/kittyhimedirectory.html
@@ -61,11 +61,14 @@ a:hover {cursor:url(https://i.imgur.com/o580d2h.png), progress;
         <br><br>
     <center>
       <audio autoplay loop src="music/kimini.mp3"></audio>
-        <img src="img/mewf.png">
+      <img width= 320px; height= auto; src="img/mewf.png">
     </center>
-    <h1><img src="https://i.imgur.com/VLw5vg5.png"></img>
-      ꒰ directory ꒱ <img src="https://i.imgur.com/VLw5vg5.png"></img><br>
+    <h1><img width= 27px; height= auto; src="img/littlebow.png"></img>
+      ꒰ directory ꒱ <img width= 27px; height= auto; src="img/littlebow.png"></img><br>
     </h1>
+    <center>
+      <img width= 350px; height= auto; src="img/ribbonbanner.png"></img>
+    </center>
       <div class="centered">
     <h4>click on any of the links to know more !! ♡ 
     </h4></div>
@@ -74,7 +77,9 @@ a:hover {cursor:url(https://i.imgur.com/o580d2h.png), progress;
     <a href="index.html">𝑏𝑎𝑐𝑘</a><br>
     <a href="kittyhimestory.html">𝑠𝑡𝑜𝑟𝑦</a><br>
     <a href="kittyhimeharem.html">ℎ𝑎𝑟𝑒𝑚</a><br>
-    <a href="kittyhimeinfo.html">𝑖𝑛𝑓𝑜</a><br><br><br><br>
+    <a href="kittyhimeinfo.html">𝑖𝑛𝑓𝑜<br>
+      <a href="kittyhimepolicy.html">𝑝𝑜𝑙𝑖𝑐𝑦</a><br><br><br>
+    </a><br><br><br><br>
     <marquee behavior="scroll" direction="right" style="color: #e0aebf;" text-shadow="1px 1px #ffe4f2;" font-size="20px;">. +ꔫ ꒰ pompuffpaws ꒱ ꔫ+ . </marquee>
     </center>
     </body>
