--- a/kittyhimeinfo.html
+++ b/kittyhimeinfo.html
@@ -73,8 +73,9 @@ a:hover {cursor:url(https://i.imgur.com/o580d2h.png), progress;
         <br><br>
         <audio autoplay loop src="music/worldismine.mp3"></audio>
     <center>
-        <img src="img/mewf.png"><br>
-        <h1><img src="https://i.imgur.com/VLw5vg5.png"></img> information <img src="https://i.imgur.com/VLw5vg5.png"></img></h1>
+        <img width= 320px; height= auto; src="img/mewf.png">
+        <h1><img width= 27px; height= auto; src="img/littlebow.png"></img> information <img width= 27px; height= auto; src="img/littlebow.png"></img></h1>
+        <img width= 350px; height= auto; src="img/ribbonbanner.png"></img>
     </center>
           <div class="info">
       <p style="float: left;">etoile is a munchkin and turkish angora breed, as well as an angel. turkish angoras are soft,
