--- a/kittyhimepolicy.html
+++ b/kittyhimepolicy.html
@@ -62,19 +62,22 @@ position: relative;
     <br><br>
 <center>
   <audio autoplay loop src="music/superstar.mp3"></audio>
-    <img src="img/mewf.png">
+    <img width= 200px; height= auto; src="img/pawbow.png">
 </center>
-<h1 id="h1"><img src="https://i.imgur.com/VLw5vg5.png"></img>
-website policy <img src="https://i.imgur.com/VLw5vg5.png"></img>
+<h1 id="h1"><img width= 27px; height= auto; src="img/littlebow.png"></img>
+website policy <img width= 27px; height= auto; src="img/littlebow.png"></img>
 </h1>
-<h4>kittyhime defintion ♡ a kitten princess</h4>
+<center>
+<h4>♡ read these terms carefully ♡ </h4></center>
   <div class="centered">
-<p>welcome to etoile's official website !! ♡ etoile is a character that belongs to pompuffpaws. click the links to read more about her !!
-i hope you enjoy my ideas !! she was created on august 2 of 2019, and remains my soft beloved mascot to this very day !! ♡ 
+<p>the kittyhime website will not be held responsible to damages through using the website, such as the loss of time. you are not permitted to use the kittyhime's 
+    website code in order to make a replica. you are not permitted to use <i>any</i> of the artwork and graphics hosted on this site under any circumstance. you are 
+    not permitted to copy the website's layout, the artwork, and the mascot featured. there will be severe consequences otherwise. I will only allow the use of inspect
+    to study the code and learn, but under no circumstance will this code be used as a base for your own. 
 </p></div>
 <center>
 <img src="img/pixelbow.png"><br>
-<a href="kittyhimedirectory.html">𝑑𝑖𝑟𝑒𝑐𝑡𝑜𝑟𝑦</a><br><br><br>
+<a href="index.html">𝑏𝑎𝑐𝑘</a><br><br><br><br>
 <marquee behavior="scroll" direction="right" style="color: #e0aebf;" text-shadow="1px 1px #ffe4f2;" font-size="20px;">. +ꔫ ꒰ pompuffpaws ꒱ ꔫ+ . </marquee>
 </center>
 </body>
