--- a/kittyhimestory.html
+++ b/kittyhimestory.html
@@ -36,7 +36,7 @@ float: left;
   height: 425px;
   overflow: auto;
   margin: auto;
-  font-size: 17px;
+  font-size: 15.5px;
   padding-bottom: 0px;
 }
 </style>
@@ -65,11 +65,11 @@ float: left;
     <br><br>
     <audio autoplay loop src="music/koikoikoi.mp3"></audio>
 <center>
-    <img src="img/mewf.png"><br>
-    <h1><img src="https://i.imgur.com/VLw5vg5.png"></img> ꒰ once upon a time . . . ꒱ <img src="https://i.imgur.com/VLw5vg5.png"></img></h1>
+  <img width= 320px; height= auto; src="img/mewf.png">
+    <h1><img width= 27px; height= auto; src="img/littlebow.png"></img> ꒰ once upon a time . . . ꒱ <img width= 27px; height= auto; src="img/littlebow.png"></img></h1>
 </center>
       <div class="story">
-  <p style="float: left;">an angel boy came down from the heavens to admire the earth below.
+  <p font-size= 10px; style="float: left;">an angel boy came down from the heavens to admire the earth below.
 when he came down and explored the world for the first time in a while, he met a girl, pure and sweet. over time, they went from friends, to close friends,
 to soulmates. he fell in love with her purity, and she, his caringness and determination. their love
 spiraled into an emotion so strong, it's gentle passion gifted them with a child, whom had the soaring 
@@ -85,7 +85,7 @@ away from this misery... just then, selene, a dragon whom is feared and acknowle
 of the moon, told etoile that she was destined to be with her. selene was strict, and etoile found her 
 intimidating and serious at times. but in truth, selene was just another good mother figure to her. etoile now works
 as a lunarian, delivering selene's messages and claiming it to be 'truth', as well as living with her fellow
-lunarian friends.</p>
+lunarian friends.</font></p>
   </div>
   <center>
     <img src="img/pixelbow.png"><br>
