--- a/kittyhimeharem.html
+++ b/kittyhimeharem.html
@@ -43,9 +43,9 @@ a:hover {cursor:url(https://i.imgur.com/o580d2h.png), progress;
       margin: auto;
     }
     .harem {
-      font-size: 20px;
+      font-size: 10px;
       text-align: center;
-      max-width: 547px;
+      max-width: 600px;
       height: 400px;
       overflow: auto;
       margin: auto;
@@ -76,13 +76,16 @@ a:hover {cursor:url(https://i.imgur.com/o580d2h.png), progress;
         <br><br>
     <center>
       <audio autoplay loop src="music/sainco.mp3"></audio>
-        <img src="img/mewf.png">
+      <img width= 320px; height= auto; src="img/mewf.png">
     </center>
-    <h1><img src="https://i.imgur.com/VLw5vg5.png"></img>
+    <h1><img width= 27px; height= auto; src="img/littlebow.png"></img>
     </center>
     etoile's harem
-    <img src="https://i.imgur.com/VLw5vg5.png"></img></h1>
+    <img width= 27px; height= auto; src="img/littlebow.png"></img></h1>
     <center><h3>none of these ocs are mine !!</h3></center>
+    <center>
+      <img width= 350px; height= auto; src="img/ribbonbanner.png"></img>
+    </center>
     <center>
     <div class="container" style="margin-top: 10px;">
       <div class="harem">
