--- a/kittyhimepolicy.html
+++ b/kittyhimepolicy.html
@@ -68,13 +68,14 @@ position: relative;
 website policy <img width= 27px; height= auto; src="img/littlebow.png"></img>
 </h1>
 <center>
-<h4>♡ read these terms carefully ♡ </h4></center>
+<h4>♡ read these terms carefully ♡ </h4>
+<img width= 350px; height= auto; src="img/ribbonbanner.png"></img></center>
   <div class="centered">
 <p>the kittyhime website will not be held responsible to damages through using the website, such as the loss of time. you are not permitted to use the kittyhime's 
     website code in order to make a replica. you are not permitted to use <i>any</i> of the artwork and graphics hosted on this site under any circumstance. you are 
     not permitted to copy the website's layout, the artwork, and the mascot featured. there will be severe consequences otherwise. I will only allow the use of inspect
     to study the code and learn, but under no circumstance will this code be used as a base for your own. 
-</p></div>
+</p></div><br>
 <center>
 <img src="img/pixelbow.png"><br>
 <a href="index.html">𝑏𝑎𝑐𝑘</a><br><br><br><br>
