--- a/kittyhimepolicy.html
+++ b/kittyhimepolicy.html
@@ -74,7 +74,7 @@ website policy <img width= 27px; height= auto; src="img/littlebow.png"></img>
 <p>the kittyhime website will not be held responsible to damages through using the website, such as the loss of time. you are not permitted to use the kittyhime's 
     website code in order to make a replica. you are not permitted to use <i>any</i> of the artwork and graphics hosted on this site under any circumstance. you are 
     not permitted to copy the website's layout, the artwork, and the mascot featured. there will be severe consequences otherwise. I will only allow the use of inspect
-    to study the code and learn, but under no circumstance will this code be used as a base for your own. 
+    to study the code and learn, but under no circumstance will this code be used as a base for your own. otherwise, you will be added to a public blacklist.
 </p></div><br>
 <center>
 <img src="img/pixelbow.png"><br>
