--- a/kittyhimestory.html
+++ b/kittyhimestory.html
@@ -68,6 +68,9 @@ float: left;
   <img width= 320px; height= auto; src="img/mewf.png">
     <h1><img width= 27px; height= auto; src="img/littlebow.png"></img> ꒰ once upon a time . . . ꒱ <img width= 27px; height= auto; src="img/littlebow.png"></img></h1>
 </center>
+<center>
+  <img width= 350px; height= auto; src="img/ribbonbanner.png"></img>
+</center>
       <div class="story">
   <p font-size= 10px; style="float: left;">an angel boy came down from the heavens to admire the earth below.
 when he came down and explored the world for the first time in a while, he met a girl, pure and sweet. over time, they went from friends, to close friends,
@@ -85,7 +88,7 @@ away from this misery... just then, selene, a dragon whom is feared and acknowle
 of the moon, told etoile that she was destined to be with her. selene was strict, and etoile found her 
 intimidating and serious at times. but in truth, selene was just another good mother figure to her. etoile now works
 as a lunarian, delivering selene's messages and claiming it to be 'truth', as well as living with her fellow
-lunarian friends.</font></p>
+lunarian friends. but etoile still feels somewhat empty, like something is missing . . .</font></p>
   </div>
   <center>
     <img src="img/pixelbow.png"><br>
