--- a/kittyhimedirectory.html
+++ b/kittyhimedirectory.html
@@ -137,11 +137,11 @@ a:hover {cursor:url(https://i.imgur.com/o580d2h.png), progress;
       </html>
     <center>
     <img src="img/pixelbow.png"><br>
-    <a href="index.html">𝑏𝑎𝑐𝑘</a><br>
-    <a href="kittyhimestory.html">𝑠𝑡𝑜𝑟𝑦</a><br>
+    <a href="index.html">𝑏𝑎𝑐𝑘 ♡</a>
+    <a href="kittyhimestory.html">𝑠𝑡𝑜𝑟𝑦 ♡</a>
     <a href="kittyhimeharem.html">ℎ𝑎𝑟𝑒𝑚</a><br>
-    <a href="kittyhimeinfo.html">𝑖𝑛𝑓𝑜<br>
-      <a href="kittyhimethoughts.html">𝑖𝑛𝑓𝑜<br>
+    <a href="kittyhimeinfo.html">𝑖𝑛𝑓𝑜 ♡</a>
+      <a href="kittyhimethoughts.html">𝑡ℎ𝑜𝑢𝑔ℎ𝑡𝑠 ♡</a>
       <a href="kittyhimepolicy.html">𝑝𝑜𝑙𝑖𝑐𝑦</a><br><br><br>
     </a><br><br><br><br>
     <marquee behavior="scroll" direction="right" style="color: #e0aebf;" text-shadow="1px 1px #ffe4f2;" font-size="20px;">. +ꔫ ꒰ pompuffpaws ꒱ ꔫ+ . </marquee>
