--- a/kittyhimethoughts.html
+++ b/kittyhimethoughts.html
@@ -156,7 +156,7 @@ a:hover {cursor:url(https://i.imgur.com/o580d2h.png), progress;
       </html>
     <center>
     <img src="img/pixelbow.png"><br>
-    <a href="index.html">𝑏𝑎𝑐𝑘</a><br><br><br>
+    <a href="kittyhimedirectory.html">𝑏𝑎𝑐𝑘</a><br><br><br>
     </a><br><br><br><br>
     <marquee behavior="scroll" direction="right" style="color: #e0aebf;" text-shadow="1px 1px #ffe4f2;" font-size="20px;">. +ꔫ ꒰ pompuffpaws ꒱ ꔫ+ . </marquee>
     </center>
