--- a/kittyhimedirectory.html
+++ b/kittyhimedirectory.html
@@ -49,14 +49,14 @@ a:hover {cursor:url(https://i.imgur.com/o580d2h.png), progress;
 <meta property="og:url" content="index.html">
 <meta property="og:title" content="♡ ꔫ 𝑘𝑖𝑡𝑡𝑦ℎ𝑖𝑚𝑒 ꔫ ♡">
 <meta property="og:description" content="꒰ ♡ all about etoile ♡ ꒱">
-<meta property="og:image" content="https://i.imgur.com/4ACmg2N.png">
+<meta property="og:image" content="https://i.imgur.com/cgBsllE.png">
 <meta property="og:image:type" content="image/jpeg">
 <meta property="og:type" content="website">
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="index.html">
 <meta property="twitter:title" content="♡ ꔫ 𝑘𝑖𝑡𝑡𝑦ℎ𝑖𝑚𝑒 ꔫ ♡">
 <meta property="twitter:description" content="꒰ ♡ all about etoile ♡ ꒱">
-<meta property="twitter:image" content="https://i.imgur.com/4ACmg2N.png">
+<meta property="twitter:image" content="https://i.imgur.com/cgBsllE.png">
     </head>
     <body>
         <br><br>
@@ -122,7 +122,9 @@ a:hover {cursor:url(https://i.imgur.com/o580d2h.png), progress;
       quotes[3]="i love you q///q do your best ໒꒱"
       quotes[4]="i am babey ໒꒱"   
       quotes[5]="am i cute? ໒꒱"
-      quotes[6]="myau? myau myau? ໒꒱"      
+      quotes[6]="myau? myau myau? ໒꒱"  
+      quotes[7]="drink lots of water !! ໒꒱"    
+      quotes[8]="take care of yourself . . .  ໒꒱"  
       function randomdisplay(){
       randomquote=quotes[Math.floor(Math.random()*quotes.length)]
       document.scriptform.scriptinput.value=randomquote
