--- a/kittyhimethoughts.html
+++ b/kittyhimethoughts.html
@@ -49,14 +49,14 @@ a:hover {cursor:url(https://i.imgur.com/o580d2h.png), progress;
 <meta property="og:url" content="index.html">
 <meta property="og:title" content="♡ ꔫ 𝑘𝑖𝑡𝑡𝑦ℎ𝑖𝑚𝑒 ꔫ ♡">
 <meta property="og:description" content="꒰ ♡ all about etoile ♡ ꒱">
-<meta property="og:image" content="https://i.imgur.com/4ACmg2N.png">
+<meta property="og:image" content="https://i.imgur.com/cgBsllE.png">
 <meta property="og:image:type" content="image/jpeg">
 <meta property="og:type" content="website">
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="index.html">
 <meta property="twitter:title" content="♡ ꔫ 𝑘𝑖𝑡𝑡𝑦ℎ𝑖𝑚𝑒 ꔫ ♡">
 <meta property="twitter:description" content="꒰ ♡ all about etoile ♡ ꒱">
-<meta property="twitter:image" content="https://i.imgur.com/4ACmg2N.png">
+<meta property="twitter:image" content="https://i.imgur.com/cgBsllE.png">
     </head>
     <body>
         <br><br>
